# SciLisp

./: .dir-locals.el  .gitignore  .gitmodules  LICENSE  Makefile  Makefile.am  Makefile_hand_written  README.md  array.c  array.h  autogen.sh  bignum.c  bignum.h  bootstrap.sh  c_codegen.c  c_ir.c  ccall.c  cffi.c  cffi.h  codegen.c  codegen.h  common.h  conditions.c  configure.ac  cons.c  cons.h  debug.h  emacs_regex.c  emacs_regex.h  env.c  env.h  eval.c  fnv_hash.c  format.c  frontend.c  gen_cffi.c  gen_cffi.h  hash.c  hash.h  hash_fn.c  (+38 more)
EmacsRefs/: data.c  lisp.h
SFMT/: Makefile  Makefile.am  SFMT.c  SFMT_lib.c
bignum/gmp/: Makefile  aclocal.m4  config.h  config.m4  config.status  configure  gen-bases  gen-fac  gen-fib  gen-jacobitab  gen-psqr  gen-trialdivtab  libtool
bignum/gmp/.libs/: libgmp.lai
bignum/gmp/cxx/: Makefile
bignum/gmp/demos/: Makefile
bignum/gmp/demos/calc/: Makefile
bignum/gmp/demos/expr/: Makefile
bignum/gmp/doc/: Makefile
bignum/gmp/mpf/: Makefile
bignum/gmp/mpn/: Makefile
bignum/gmp/mpq/: Makefile
bignum/gmp/mpz/: Makefile
bignum/gmp/printf/: Makefile
bignum/gmp/rand/: Makefile
bignum/gmp/scanf/: Makefile
bignum/gmp/tests/: Makefile
bignum/gmp/tests/cxx/: Makefile
bignum/gmp/tests/devel/: Makefile
bignum/gmp/tests/misc/: Makefile
bignum/gmp/tests/mpf/: Makefile
bignum/gmp/tests/mpn/: Makefile
bignum/gmp/tests/mpq/: Makefile
bignum/gmp/tests/mpz/: Makefile
bignum/gmp/tests/rand/: Makefile
bignum/gmp/tune/: Makefile
bignum/mpfr/: Makefile  config.status  libtool
bignum/mpfr/doc/: Makefile
bignum/mpfr/src/: Makefile
bignum/mpfr/src/.deps/: abort_prec_max.Plo  acos.Plo  acosh.Plo  add.Plo  add1.Plo  add1sp.Plo  add_d.Plo  add_ui.Plo  agm.Plo  ai.Plo  asin.Plo  asinh.Plo  atan.Plo  atan2.Plo  atanh.Plo  bernoulli.Plo  buildopt.Plo  cache.Plo  cbrt.Plo  check.Plo  clear.Plo  clears.Plo  cmp.Plo  cmp2.Plo  cmp_abs.Plo  cmp_d.Plo  cmp_ld.Plo  cmp_si.Plo  cmp_ui.Plo  comparisons.Plo  const_catalan.Plo  const_euler.Plo  const_log2.Plo  const_pi.Plo  constant.Plo  copysign.Plo  cos.Plo  cosh.Plo  cot.Plo  coth.Plo  (+179 more)
bignum/mpfr/src/.libs/: libmpfr.lai
bignum/mpfr/tests/: Makefile
bignum/mpfr/tune/: Makefile
doc/: Makefile  SciLisp.texi  manual.m4  manual.texi  scoping.txt  todo.org
extra/: SciLisp.el  cl_prims.c  configure.el  configure.lisp  cpuid  cpuid.c  generate_ccall.el  generate_prims.el  generate_prims.lisp  indent_script.el  llvm_temp.h  llvmh_header.c  prim_temp.c  prim_temp.h  primc_header.c  primh_header.h
include/: cord.h  ffi.h
mersenne_twister/: Makefile  SFMT_lib.h  SFMT_r.c  SFMT_r.h  SFMT_static.c  SFMT_static.h  SFMT_test.c
readline/: Makefile  config.status
readline/examples/: Makefile
readline/lib/: libhistory.old  libreadline.old
readline/shlib/: Makefile
src/: .gitignore  Makefile.am  Makefile_read_test  TAGS  array.c  array.h  atomic.h  bignum.c  bignum.h  bits.c  builtin_macros.c  caseify.c  ccall.c  cffi.c  cffi.h  city_hash.c  city_hash.h  codegen.h  common.h  conditions.c  cons.c  cons.h  cord.c  cread.c  debug.h  emacs_regex.c  emacs_regex.h  env.c  env.h  error.h  error_fmt.h  eval_new.c  fnv_hash.c  format.c  frames.c  frames.h  frontend.c  frontend.h  gen_cffi.h  get_hash.c  (+68 more)
src/SFMT/: Makefile  Makefile.am  SFMT.c  SFMT.h  SFMT_r.h  SFMT_static.h  SFMT_test.c
src/asm/: fetch_and_add_double.S
src/codegen/: llvm_aliases.h  llvm_codegen.c  llvm_compiler.c  llvm_fixed_case.txt  llvm_test.c
src/cord/: cord.c  cord.h  cord_extra.c  cord_extra.h  cord_macros.h  cord_pos.h  cordbscs.c  cordxtra.c  ec.h
src/extra/: .gitignore  UTF-8_charmap-simple  builtin_symbols.h  cblas.h  format_binary.c  gc_makefile_am.patch  generate_prims.el  generate_prims_new.el  generate_prims_old.el  libffi_makefile_am.patch  lisp_name_to_c.c  memcpy_stride.S  memcpy_stride.c  memcpy_stride_extra.c  number_name.c  parse_utf8_charmap.c  prim_new.c  prim_new.h  primc_header.c  read_tables.h  test_memcpy_stride.c  translate_symbols.el  x86_asm.h
src/extra/libutf8/: decode.c  decode.h  decode_state.c  decode_state.h  encode.c  encode.h  encode_state.c  encode_state.h  lisp_utf8.c  lisp_utf8.h
src/flex_lexer/: lex.yy.c  lex.yy.h  lex_read.c  lisp.lex
src/make_prims/: Makefile.am  primc_header.c
tests/: math_test.lisp  sanity-test.lisp  sanity-test.output  test_common.lisp  test_cons.lisp  test_threads.pl  thread_test_loop.sh  unicode_test.lisp
